Bug 128599 - Crash when typing in the Authentication Required dialog
Summary: Crash when typing in the Authentication Required dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Network
  Show dependency treegraph
 
Reported: 2019-11-05 02:28 UTC by Aron Budea
Modified: 2019-11-05 12:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (11.96 KB, text/plain)
2019-11-05 02:28 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-11-05 02:28:21 UTC
Created attachment 155513 [details]
Backtrace

I could only reproduce this in Windows, and the only method of getting to the dialog I know is opening a WebDAV link (other remote links might work as well).

My repro is:
- open a WebDAV link eg. from command line: soffice.exe <URL to file>
- start typing the user name

=> Crashes after the first character (backtrace attached).
Also crashes when switching to a different application and back instead of typing.

Observed in LO 6.4.0.0.alpha1+ (2187cff2d452e20aa1fdfd5d8aa7473242cd1eb6) / Windows 7.
No crash in LO 6.3.0.4.
=> regression

Bibisected to the following commit using repo bibisect-win64-6.4. Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f7cd8f4238060249de11c4ec7d167c439f7a781
author		Caolán McNamara <caolanm@redhat.com>	2019-10-18 16:00:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-19 16:28:53 +0100

add menubar support to vclbuilder
Comment 1 Xisco Faulí 2019-11-05 09:07:04 UTC
Moving to NEW since it has been bisected
Comment 2 Caolán McNamara 2019-11-05 09:12:48 UTC
./instdir/program/soffice.bin https://webdav.opendrive.com/
Comment 3 Commit Notification 2019-11-05 12:23:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d62dc01ebc52b0d7f88dd1e42aa1a9f7961a85ea

Resolves: tdf#128599 null deref

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.