Resolves: tdf#128599 null deref

Change-Id: If71a32b15b5ffab11185e2ce253ab65faf7e6ac3
Reviewed-on: https://gerrit.libreoffice.org/82056
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>